adds info section

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
   <body>
     <div class="container">
+    <!-- row 1 start -->
     <div class="row">
         <!-- carousel start -->
         <div class="col-12 col-sm-6">
@@ -57,7 +58,51 @@
             <!-- INSERT ADD TO CART BUTTON -->
         <!-- description end -->
         </div>
+    <!-- row 1 end -->
     </div>
+    <!-- row 2 start -->
+    <div class="row">
+        <div class="col">
+            <h4>Product Information </h4>
+            <!-- tabbed info start -->
+            <!-- CENTER THESE TABS -->
+            <ul class="product-info-body nav nav-tabs" id="myTab" role="tablist">
+                    <li class="nav-item">
+                      <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Description</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Details</a>
+                    </li>
+                  </ul>
+                  <div class="tab-content" id="myTabContent">
+                    <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure fuga neque magni repellendus, placeat, sunt at velit laborum accusantium non eum eius nemo in nisi aspernatur reiciendis nobis beatae sapiente.</div>
+                    <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">Actually bitters plaid locavore franzen. Affogato swag letterpress meggings leggings next level fingerstache brooklyn YOLO franzen cray. XOXO tofu fashion axe taxidermy dreamcatcher authentic, readymade woke af</div>
+                    
+                  </div>
+
+        </div>
+    <!-- row 2 end -->
+    </div>
+    <!-- row 3 start -->
+    <div class="row">
+        <h4 class="col-12">Similar Items</h4>
+        <!-- images start -->
+            <div class="col-6 col-sm">
+                test
+            </div>
+            <div class="col-6 col-sm">
+                test
+            </div>
+            <div class="col-6 col-sm">
+                test
+            </div>
+            <div class="col-6 col-sm">
+                test
+            </div>
+        <!-- images end -->
+    <!-- row 3 end -->
+    </div>
+    <!-- container end -->
     </div>          
 
 
