--- a/index.html
+++ b/index.html
@@ -12,22 +12,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
   <body>
-    <!-- navbar -->
-    <!-- <nav class="navbar fixed-top nav-bg justify-content-between">
-        <a class="navbar-brand">
-            <img class="logo" src="/Users/jordanmesias/Desktop/UX:UI Bootcamp/Homework/ecommerce/Images/logo.png" alt="potato logo">    
-        </a>
-        <span class="navbar-text">
-                Everything Potatoes
-        </span>
-        <form class="form-inline">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
-    </nav> -->
+    <!-- alert -->
+    <div class="loadAlert container-fluid">
+        <p>Not looking for potatoes? Browse other products <a href="#">here</a></p>
+        <button type="button" class="close" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
 
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg fixed-top ">
+    <nav class="navbar navbar-expand-lg  ">
         <a class="navbar-brand" href="#">
             <img class="logo" src="/Users/jordanmesias/Desktop/UX:UI Bootcamp/Homework/ecommerce/Images/logo.png" alt="potato logo">
         </a>
@@ -81,7 +75,7 @@
                             <div class="modal-body">
                                 <form>
                                     <div class="form-group">
-                                        <label class="label-copy" for="exampleInputEmail1">Full Name</label>
+                                        <label class="label-copy" id="fullName" for="exampleInputEmail1">Full Name</label>
                                         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Full Name">
                     
                                     </div>
@@ -90,12 +84,11 @@
                                         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email">
                                         <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                                     </div>
-                                    <button type="submit" class="btn btn-primary">Submit</button>
                                 </form>
                             </div>
                             <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-primary">Save changes</button>
+                            <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
+                            <button type="button" id="modalSubmit" class="btn btn-primary">Sign me Up!</button>
                             </div>
                         </div>
                         </div>
