adds close to alert

--- a/index.html
+++ b/index.html
@@ -13,15 +13,21 @@
 </head>
   <body>
     <!-- alert -->
-    <div class="loadAlert container-fluid">
+    <!-- <div class="loadAlert container-fluid">
         <p>Not looking for potatoes? Browse other products <a href="#">here</a></p>
         <button type="button" class="close" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
-    </div>
+    </div> -->
 
+    <div class="alert alert-primary" id="topAlert" role="alert">
+        Not looking for potatoes? Browse our other products <a href="#">Here.</a>  
+        <button type="button" id="closeAlert" class="close" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg  ">
+    <nav class="navbar navbar-expand-lg ">
         <a class="navbar-brand" href="#">
             <img class="logo" src="/Users/jordanmesias/Desktop/UX:UI Bootcamp/Homework/ecommerce/Images/logo.png" alt="potato logo">
         </a>
