--- a/index.html
+++ b/index.html
@@ -10,16 +10,22 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     
     <link rel="stylesheet" href="style.css">
+
+    <!-- tracking -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122376636-1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-122376636-1');
+    </script>
+
 </head>
   <body>
-    <!-- alert -->
-    <!-- <div class="loadAlert container-fluid">
-        <p>Not looking for potatoes? Browse other products <a href="#">here</a></p>
-        <button type="button" class="close" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-        </button>
-    </div> -->
 
+    <!-- alert -->
     <div class="alert alert-primary" id="topAlert" role="alert">
         Not looking for potatoes? Browse our other products <a href="#">Here.</a>  
         <button type="button" id="closeAlert" class="close" aria-label="Close">
