--- a/index.html
+++ b/index.html
@@ -87,16 +87,19 @@
                             <div class="modal-body">
                                 <form>
                                     <div class="form-group">
-                                        <label class="label-copy" id="fullName" for="exampleInputEmail1">Full Name</label>
-                                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Full Name">
+                                        <div id="modalNameError">Please submit your full name</div>
+                                        <label class="label-copy" for="exampleInputEmail1">Full Name</label>
+                                        <input id="fullName" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Full Name">
                     
                                     </div>
                                     <div class="form-group">
+                                            <div id="modalEmailError">Please submit your email address</div>
                                         <label class="label-copy" for="exampleInputEmail1">Email</label>
-                                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email">
+                                        <input type="email" id="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email">
                                         <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                                     </div>
                                 </form>
+                                <div id="completionMessage"></div>
                             </div>
                             <div class="modal-footer">
                             <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
