changes image paths

--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg ">
         <a class="navbar-brand" href="#">
-            <img class="logo" src="/Users/jordanmesias/Desktop/UX:UI Bootcamp/Homework/ecommerce/Images/logo.png" alt="potato logo">
+            <img class="logo" src="Images/logo.png" alt="potato logo">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">
                 <!-- icon here -->
-                <img src="/Users/jordanmesias/Desktop/UX:UI Bootcamp/Homework/ecommerce/Images/shopping-cart.png" alt="shopping cart">
+                <img src="Images/shopping-cart.png" alt="shopping cart">
             </span>
         </button>
         
@@ -70,7 +70,7 @@
                  <!-- Button trigger modal -->
                 <button type="button" class="btn btn-primary nav-btn ml-2" data-toggle="modal" data-target="#exampleModalLong">
                         Sign Up for Savings 
-                        <img src="/Users/jordanmesias/Desktop/UX:UI Bootcamp/Homework/ecommerce/Images/shopping-cart.png" alt="shopping cart">
+                        <img src="Images/shopping-cart.png" alt="shopping cart">
 
                     </button>
                     
@@ -127,13 +127,13 @@
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                        <img class="potato-carousel-img d-block w-100" src="/Users/jordanmesias/Desktop/UX:UI Bootcamp/Homework/ecommerce/Images/potato1.jpg" alt="Potato 1">
+                        <img class="potato-carousel-img d-block w-100" src="Images/potato1.jpg" alt="Potato 1">
                         </div>
                         <div class="carousel-item">
-                        <img class="potato-carousel-img d-block w-100" src="/Users/jordanmesias/Desktop/UX:UI Bootcamp/Homework/ecommerce/Images/potato2.jpg" alt="Potato 2">
+                        <img class="potato-carousel-img d-block w-100" src="Images/potato2.jpg" alt="Potato 2">
                         </div>
                         <div class="carousel-item">
-                        <img class="potato-carousel-img d-block w-100" src="/Users/jordanmesias/Desktop/UX:UI Bootcamp/Homework/ecommerce/Images/potato3.jpg" alt="Potato 3">
+                        <img class="potato-carousel-img d-block w-100" src="Images/potato3.jpg" alt="Potato 3">
                         </div>
                     </div>
                     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -205,16 +205,16 @@
         <h4 class="col-12">Similar Items</h4>
         <!-- images start -->
             <div class="col-6 col-sm">
-                <img class="similar-items" src="/Users/jordanmesias/Desktop/UX:UI Bootcamp/Homework/ecommerce/Images/carrot.jpg" alt="carrot">
+                <img class="similar-items" src="Images/carrot.jpg" alt="carrot">
             </div>
             <div class="col-6 col-sm">
-                <img class="similar-items" src="/Users/jordanmesias/Desktop/UX:UI Bootcamp/Homework/ecommerce/Images/lotus.jpg" alt="lotus">
+                <img class="similar-items" src="Images/lotus.jpg" alt="lotus">
             </div>
             <div class="col-6 col-sm">
-                <img class="similar-items" src="/Users/jordanmesias/Desktop/UX:UI Bootcamp/Homework/ecommerce/Images/radish.jpg" alt="radish">
+                <img class="similar-items" src="Images/radish.jpg" alt="radish">
             </div>
             <div class="col-6 col-sm">
-                <img class="similar-items" src="/Users/jordanmesias/Desktop/UX:UI Bootcamp/Homework/ecommerce/Images/yam.jpg" alt="yam">
+                <img class="similar-items" src="Images/yam.jpg" alt="yam">
             </div>
         <!-- images end -->
     <!-- row 3 end -->
