--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </button>
     </div>
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg ">
+    <nav class="navbar sticky-top navbar-expand-lg ">
         <a class="navbar-brand" href="#">
             <img class="logo" src="Images/logo.png" alt="potato logo">
         </a>
